# HomeCredit

./: README.md  homecredit-catboost-lightgbm-logreg.ipynb  pyproject.toml
homecredit/: research.ipynb
homecredit/.ipynb_checkpoints/: research-checkpoint.ipynb
homecredit/Utils/: datapreproc.py  train.py
