[tool.poetry]
name = "homecredit"
version = "0.1.0"
description = ""
authors = ["Ega2901 <mr.tuzharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
scikit-learn = "^1.4.2"
lightgbm = "^4.3.0"
numpy = "^1.26.4"
polars = "^0.20.19"
kaggle = "^1.6.11"
tqdm = "^4.66.2"
mlflow = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
