[tool.poetry]
name = "homecredit"
version = "0.1.0"
description = ""
authors = ["Ega2901 <mr.tuzharov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.6"
polars = {extras = ["all"], version = "^0.20.19"}
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
scikit-learn = "^1.4.2"
lightgbm = "^4.3.0"
numpy = "^1.26.4"
kaggle = "^1.6.11"
tqdm = "^4.66.2"
mlflow = "^2.11.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pylint = "^3.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
faker = "^24.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
